--- a/index.html
+++ b/index.html
@@ -1,92 +1,84 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-    <head>
-        <meta charset="UTF-8">
-        <link rel="stylesheet" href="style.css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <link rel="preconnect" href="https://fonts.gstatic.com">
-        <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-        <title>Lições aprendidas - TRYBE</title>
-    </head>
-    <body>
-        <header id="cabecalho">
-            <h1 id="titulo">Lições aprendidas - TRYBE</h1>
-            <h2 id="index">Índice</h2>
-            <nav id="menu-navegacao">
-                <ul>
-                    <li><a href="#informacoes">Informações</a></li>
-                    <li><a href="#lado-direito">Histórias do Curso</a></li>
-                    <li><a href="#licoes_aprendidas">Lista de aprendizados</a></li>
-                    <li><a href="#rodape">Siga-Me</a></li>
-                </ul>
-            </nav>
-        </header>
-        <div id="informacoes">
-            <h3>José Luiz Fagundes</h3>
-            <img src="2019-05-27.png" alt="Foto José Luiz Fagundes" id="minha_foto" width="150px">
-            <h3>Informações</h3>
-            <table>
-                <tr>
-                    <th>Nome Completo</th>
-                    <td>José Luiz Fagundes</td>
-                </tr>
-                <tr>
-                    <th>Idade</th>
-                    <td>38 anos</td>
-                </tr>
-            </table>
-        </div>
-        <aside class="lado-direito">
-            <p><strong>Passagem sobre aprendizado:</strong> O Curso tem proporcionado ótimas experiencias para mim e acredito que para todos os alunos da turma 9, estou impressionado com a qualidade de ensino e o suporte ao aluno que a trybe oferece e entrega.</p>
-        </aside>
-        <article class="lado-esquerdo">
-            <p><strong>Minha história na Trybe:</strong> Durante este primeiro mes de aprendizado, tive ótimas experiencias, uma delas foi conhecer e poder conversar com outros alunos durante as salas reduzidas, onde conheci pessoas que me inspiraram a fazer mais pelo próximo.</p>
-        </article>
-        <section id="tabelas">
-        <ol id="licoes_aprendidas">
-            <h4>Conteúdo aprendido</h4>
-            <li>Unix</li>
-            <li>Bash</li>
-            <li>Shell</li>
-            <li>Git</li>
-            <li>GitHub</li>
-            <li>Internet</li>
-            <li>HTML</li>
-            <li>CSS</li>
-            <li>CSS Posicionamento</li>
-            <li>HTML Semântico</li>
-        </ol>
-        <ul id="licoes_a_aprender">
-            <h4>Conteúdo a aprender</h4>
-            <li>Javascript</li>
-            <li>Array e Loop For</li>
-            <li>Logica de Programacao</li>
-            <li>Objetos e Funções</li>
-            <li>DOM e seletores</li>
-            <li>Elementos JS</li>
-            <li>Eventos JS</li>
-            <li>Web Storage</li>
-            <li>CSS FlexBox</li>
-            <li>CSS Responsivo</li>
-        </ul>
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link href="style.css" type="text/css" rel="stylesheet">
+    <link href="https://fonts.gstatic.com" rel="preconnect">
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&display=swap" rel="stylesheet">
+</head>
+
+<body>
+    <header id="cabecalho">
+        <h1 id="titulo">Lessons Learned | Trybe</h1>
+        <nav>
+            <a href="#topo">Home</a>
+            <a href="#sobre">Sobre</a>
+        </nav>
+    </header>
+    <section id="topo"></section>
+    <br> <br> <br> <br> <br>
+    <img id="minha_foto" src="2019-05-27.png" alt="Foto de Perfil">
+    <br>
+    <a id="portfolio" href="https://hnq-brt.github.io/" target="_blank">Portfolio | Lucas Henrique</a>
+    <ol id="licoes_aprendidas">
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>Git</li>
+        <li>GitHub</li>
+        <li>Unix</li>
+        <li>Semantic HTML</li>
+        <li>Slack</li>
+        <li>Zoom</li>
+        <li>Empatia</li>
+        <li>Inteligência Emocional</li>
+    </ol>
+    <ul id="licoes_a_aprender">
+        <li>Javascript</li>
+        <li>DOM</li>
+        <li>SQL</li>
+        <li>React</li>
+        <li>Node.js</li>
+        <li>Unit Tests</li>
+        <li>CSS Responsive</li>
+        <li>HOF</li>
+        <li>Forms</li>
+        <li>ES6</li>
+    </ul>
+    <table>
+        <tr>
+            <th>Interesses</th>
+            <th>Habilidades</th>
+        </tr>
+        <tr>
+            <td>Programação</td>
+            <td>Trabalho em Equipe</td>
+        </tr>
+        <tr>
+            <td>Eletrônica</td>
+            <td>Inteligência Emocional</td>
+        </tr>
+        <tr>
+            <td>Design</td>
+            <td>Inteligência Social</td>
+        </tr>
+        <tr>
+            <td>Música</td>
+            <td>Automotivação</td>
+        </tr>
+        <tr>
+            <td>Jogos</td>
+            <td>Empatia</td>
+        </tr>
+    </table>
+    <br>
+    <section id="sobre">
+        <article class="lado-esquerdo">O meu aprendizado na trybe nessas 3 semanas tem sido bastante recompensador, principalmente pelos desafios e exercicios passados pela plataforma. É incrível o tanto que aprendi em tão pouco tempo, algo que por si só ou por outra plataforma não seria possível. E o melhor de tudo é saber que essa frequência de aprendizado na trybe vai ser do começo ao fim.</article>
+        <aside class="lado-direito">Conteúdos aprendidos até a realização deste projeto: Primeira semana sobre Unix, Bash e Shell, a segunda sobre Git, GitHub e Internet e a terceira com Introdução à HTML e CSS.</aside>
     </section>
-        <footer id="rodape">
-            <h5 id="siga">SIGA ME</h5>
-            <div id="logos_rede_social">
-                <a target="_blank" href="https://www.linkedin.com/in/jos%C3%A9-luiz-fagundes-44016b40/">
-                    <em class="fa fa-linkedin">
-                    </em>
-                </a>
-                <a target="_blank" href="https://www.github.com/jlfagundes">
-                    <em class="fa fa-github">
-                    </em>
-                </a>
-                <a target="_blank" href="https://www.instagram.com/fagundes.joseluiz">
-                    <em class="fa fa-instagram">
-                    </em>
-                </a>
-                <p id="direitos">Todos os direitos reservados, jlfagundes</p>
-            </div>
-        </footer>
-    </body>
+    <footer id="rodape">Página criada por Lucas Henrique da Silva Brito</footer>
+</body>
+
 </html>
