Alteraçoes para avaliador

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 </tr>
                 <tr>
                     <th>Idade</th>
-                    <td>38 anos</td>
+                    <td>38 Anos</td>
                 </tr>
             </table>
         </div>
