Correçao do Artigo

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <p><strong>Passagem sobre aprendizado:</strong> O Curso tem proporcionado ótimas experiencias para mim e acredito que para todos os alunos da turma 9, estou impressionado com a qualidade de ensino e o suporte ao aluno que a trybe oferece e entrega.</p>
         </aside>
         <article class="lado-esquerdo">
-            <p><strong>Minha história na Trybe:</strong> Durante este primeiro mes de aprendizado, tive ótimas experiencias, uma delas foi conhecer e poder conversar com outros alunos durante as salas reduzidas, onde conheci pessoas que me inspiraram a fazer mais pelo próximo.</p>
+            <p><strong>Minha história na Trybe:</strong> Durante este primeiro mes de aprendizado, tive ótimas experiencias, uma delas foi conhecer e poder conversar com outros alunos durante as salas reduzidas, onde conheci pessoas que me inspiraram a fazer mais pelo próximo. O apoio que estou tendo da trybe e dos colega de turma para não desistir está sendo fundamental para continuar minha caminhada.</p>
         </article>
         <section id="tabelas">
         <ol id="licoes_aprendidas">
