--- a/index.html
+++ b/index.html
@@ -1,70 +1,72 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Lessons Learned</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Texturina:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header id="cabecalho" class="header">
-        <h1 id="titulo">A estrada até aqui...</h1>
+    <header id="cabecalho">
+        <h1 id="titulo">Lições aprendidas - TRYBE</h1>
     </header>
-    <aside class="aside-left">
-        <!-- <img id="minha_foto" src="my-picture.jpeg" alt="Jovem sorridente, largo sorriso branco e olhos enrrugados e cabelos negros" class="my-image"> -->
+
+    <nav>
+        <a href="https://www.instagram.com/jean_silveira07/" target="_blank"><img src="insta.jpg" width="75px" alt="instagram"></a>
+        <a href="https://www.linkedin.com/in/jean-silveira/" target="_blank"><img src="linkedin.png" width="50px" alt="linkedin"></a>
+    </nav>
+
+    <img id="minha_foto" src="my-picture.jpeg" width="200px" alt="Foto de um sorridente rapaz">
+
+    <main>
+        <article id="artigo_aprendizado">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, esse, quia provident facere architecto exercitationem sequi necessitatibus, est totam itaque nihil? Saepe rem excepturi cupiditate itaque amet tenetur! Corporis, fugiat. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eveniet facere hic architecto accusamus sint debitis quia corrupti praesentium tempora, veniam nulla quod, possimus quidem mollitia deserunt nostrum est magnam sunt!</p>
+        </article>
+    </main>
+
+    <section>
+        <aside id="secao_aprendizado">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores suscipit, praesentium perspiciatis expedita officiis labore molestias iste provident dolorem repellat culpa ullam reprehenderit natus aspernatur dolore eaque veniam accusamus voluptatibus.</p>
+        </aside>
+    </section>
+    
+    <aside>
         <ol id="licoes_aprendidas">
-            <h2>Lições Aprendidas</h2>
-            <li>Linux</li>
+            <li>Unix</li>
             <li>Bash</li>
-            <li>Shell</li>
+            <li>Shell Script</li>
             <li>Git</li>
-            <li>Github</li>
-            <li>Internet</li>
-            <li>DOM</li>
+            <li>GitHub</li>
+            <li>Internet - Como ela funciona</li>
             <li>HTML</li>
-            <li>HTML Semântico</li>
             <li>CSS</li>
+            <li>HTML Semântico</li>
+            <li>Estruturas de páginas</li>
         </ol>
 
         <ul id="licoes_a_aprender">
-            <h2>Lições à Aprender</h2>
-            <li>Algoritmos</li>
-            <li>Laços de repetição</li>
-            <li>JavaScript</li>
-            <li>Flexbox</li>
-            <li>Forms</li>
-            <li>Mobile</li>
-            <li>React</li>
-            <li>Redux</li>
-            <li>Python</li>
-            <li>SQL</li>
+            <li>Lógica de Programação</li>
+            <li>DOM</li>
+            <li>Eventos e Web Storage</li>
+            <li>Forms, Flexbox e Responsivo</li>
+            <li>JavaScript ES6</li>
+            <li>Higher Order Functions - HOF</li>
+            <li>JS Assíncrono</li>
+            <li>Promisses</li>
+            <li>Testes Unitários</li>
+            <li>Testes automatizados - Jest</li>
         </ul>
     </aside>
 
-    <aside class="aside-right lado-direito">
-        <a href="https://www.facebook.com/silveira.jean.9" target="_blank"><img src="face.png" width="60px" alt="FACEBOOK"></a>
-            <h2>Aprendizado</h2>
-            <p>Denomina-se cultura punk estilos da subcultura urbana que possue características comuns àquelas ditas punk, exemplo o princípio de autonomia do faça-você-mesmo, interesse pela aparência agressiva.</p>
-        </aside>
-
-    <article id="aprendizado" class="article lado-esquerdo">
-        Carpe diem é parte da frase latina carpe diem quam minimum credula postero (literalmente: 'aproveita o dia e confia o mínimo possível no amanhã'), extraída de uma das Odes, de Horácio (65 a.C. - 8 a.C.), e tem numerosas traduções possíveis: "colhe o dia" (tradução literal), desfruta o presente,viva.
-        <section>Denomina-se cultura punk estilos da subcultura urbana que possue características comuns àquelas ditas punk, exemplo o princípio de autonomia do faça-você-mesmo, interesse pela aparência agressiva.</section>
-    </article>
-    <nav class="nav">
-        <table border="4px" align="center" >
+    <footer id="rodape">
+        <table id="tabela">
             <tr>
-                <td>Home</td>
-                <td>FACEBOOK</td>
-                <td>ARTIGO</td>
-                <td>TABELAS</td>
-                <td>SAIBA MAIS</td>
+              <th>Home</th>
+              <th>Sobre</th>
+              <th>Mais</th>
             </tr>
-        </table>
-    </nav>
-    <footer id="rodape" class="footer">
-        Desenvolvido por Smylle - Jean Silveira
+          </table>
     </footer>
 </body>
 </html>
