--- a/index.html
+++ b/index.html
@@ -7,13 +7,12 @@
     <title>Projeto 1</title>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
-
-    <header id="cabecalho"><h1 id="titulo"> Projeto 1 - Lições aprendidas</h1></header>
+    <header id="cabecalho"><h1 id="titulo"> Projeto 1 - Lições aprendidas</h1> 
+    </header>
 
 <body>
     <img src ="oie_7mbgcqpjn3sh.jpg" id="minha_foto" alt="minha foto">
-    <nav><a href="https://github.com/MarinaAlane" target="_blank">GitHub</a></nav>
-    <h2>As duas primeiras semanas na Trybe</h2>
+    <h1>As duas primeiras semanas na Trybe</h1>
     <article class="lado-esquerdo">
         <p>A exatas duas semanas do início do curso, o aprendizado ultrapassa de longe o que esperava até aqui. </p>
         <p>O primeiro passo foi aprender sobre bash, kernell e os principais comandos do terminal, já que é preferível que utilizemos essa ferramenta pra manipular e criar diretórios.</p>
@@ -23,7 +22,8 @@
         <p>A quarta coisa que aprendemos foi o CSS, que é uma forma de estilizar as páginas HTML, editar toda a aparência da página, deixando ela sem aquela cara de página web do início do século. Aprendemos até a colocar imagem no plano de fundo do site, arredondar bordas, fazer o objeto ( seja texto ou imagem) flutuar, colocar ele da forma que a gente bem entender e quiser. Apesar de serem fundamentais no desenvolvimento web CSS e HTML não são linguagens de programação, são linguagens de marcação.</p></article>
 
 
-     <section class ="lado-direito"><h3> Expectativas </h3>Lorem ipsum dolor sit amet leo tempus tortor dictum pellentesque quis felis non sem at eget sit nec nec praesent aliquam lacinia fermentum auctor potenti purus vestibulum amet integer lacus justo eget purus volutpat gravida ad donec at justo quisque porta nec per viverra vivamus rhoncus aenean justo suspendisse sem blandit congue a platea laoreet morbi mollis laoreet senectus vehicula hendrerit ante cursus cras quis rhoncus potenti suspendisse faucibus enim molestie class hendrerit est sit nunc consectetur ultrices consectetur vestibulum a turpis porta nisi lacinia sagittis mi aliquet vivamus vulputate nulla lobortis vel diam arcu iaculis nisi vestibulum lacinia consectetur malesuada faucibus facilisis per vel consequat quisque senectus imperdiet quis inceptos scelerisque imperdiet lacus dui mi vehicula pharetra maecenas dictum.</section>
+     <section class ="lado-direito">
+         <h3> Expectativas </h3>Lorem ipsum dolor sit amet leo tempus tortor dictum pellentesque quis felis non sem at eget sit nec nec praesent aliquam lacinia fermentum auctor potenti purus vestibulum amet integer lacus justo eget purus volutpat gravida ad donec at justo quisque porta nec per viverra vivamus rhoncus aenean justo suspendisse sem blandit congue a platea laoreet morbi mollis laoreet senectus vehicula hendrerit ante cursus cras quis rhoncus potenti suspendisse faucibus enim molestie class hendrerit est sit nunc consectetur ultrices consectetur vestibulum a turpis porta nisi lacinia sagittis mi aliquet vivamus vulputate nulla lobortis vel diam arcu iaculis nisi vestibulum lacinia consectetur malesuada faucibus facilisis per vel consequat quisque senectus imperdiet quis inceptos scelerisque imperdiet lacus dui mi vehicula pharetra maecenas dictum.</section>
                 <aside><ol id="licoes_aprendidas"><h3> Lições aprendidas</h3>
                         <li>Bash</li>
                         <li>Unix</li>
@@ -50,7 +50,22 @@
                         <li>afsogjklkgf</li>
                     </ul></aside>
 
-
 </body>
-<footer id ="rodape"></footer>
+<footer id ="rodape">
+    <table id="tabela">
+        <th>Nome</th>
+        <th>Curso</th>
+        <th>Instituição</th>
+      </tr>
+          <td>Marina Alane </td>
+          <td> Desenvolvimento Software </td>
+          <td>Trybe</td>
+          <td>
+              <a href="https://www.betrybe.com/" target="_blank">Trybe</a>
+              <br>
+              <a href="https://github.com/MarinaAlane" target="_blank">GitHub</a>
+          </td>
+        </tr>
+      </table>
+</footer>
 </html>
